<resources>
    <string name="app_name">WorkJugent</string>
    <string name="names">Ник</string>
    <string name="login">Почта</string>
    <string name="password">Пароль</string>
    <string name="name">Имя</string>
    <string name="fameli">Фамилия</string>
    <string name="label_1">Мужской</string>
    <string name="label_2">Женский</string>
    <string name="namber">Телефон</string>
    <string name="inbox_title">Главная</string>
    <string name="outbox_title">Объявление</string>
    <string name="singen_title">Настройки</string>
    <string name="mail_subheader_title">Профиль</string>
    <string name="title_home">главная</string>
    <string name="title_dashboard">объявление</string>
    <string name="title_notifications">профиль</string>
    <string name="exit">Вход</string>
    <string name="dswfsda">Продолжить</string>
    <string name="eyvriw">Пол</string>
    <string name="exittttt">Зарегистрироваться</string>
    <string name="exitceq">Регистрация</string>
    <string name="yes">Уже есть аккаунт</string>
    <string name="dsf">Вход</string>
    <string name="whjq">Войти</string>
    <string name="no">Я новый пользователь</string>
    <string name="sity">Город</string>
    <string name="dannaii">Заполните данные</string>
    <string name="djsjakk">Дата рождения</string>
    <string name="jsdc">Название</string>
    <string name="hwqlk">Организация</string>
    <string name="rabotadatel">Работoдатель</string>
    <string name="soiskatel">Соискатель</string>
    <string name="nazv">Название: %s </string>
    <string name="pg">Организация: %s</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="ad_sity">Город: %s</string>
    <string name="ad_namber">Телефон: %s</string>
    <string name="ad_zarplata">%s</string>
    <string name="zp">Зарплата: %s</string>
    <string name="city">Город: %s</string>
    <string name="org">Организация: %s</string>
    <string name="opet">Опыт работы: %s</string>
    <string name="old">Возраст: %s</string>
    <string name="grafik">График работы: %s</string>
    <string name="opisanie">Описание: %s</string>
    <string name="adres">Адрес: %s</string>
    <string name="trebovania">Требования: %s</string>
    <string name="nomer">Телефон: %s</string>



</resources>